# VexModula

./: CMakeLists.txt  main.cpp
Engine/: AngelMacros.h  AnimatedSet.cpp  AnimatedSet.h  App.cpp  App.h  Entity.cpp  Entity.h  Exception.h  Mail.cpp  Mail.h  Room.cpp  Room.h  ScriptObjects.h  Sprite.cpp  Sprite.h  TileMap.cpp  TileMap.h  Vectors.cpp  Vectors.h
Game/: NPC.cpp  NPC.h  Player.cpp  Player.h  Rooms.cpp  Rooms.h  Sprites.cpp  Sprites.h  TileMaps.cpp  TileMaps.h
Script/: ScriptObjects.cpp  ScriptObjects.h  ScriptWrapper.cpp  ScriptWrapper.h
Script/angelscript/: readme.md
Script/angelscript/add_on/scriptarray/: scriptarray.h
Script/angelscript/add_on/scriptbuilder/: scriptbuilder.h
Script/angelscript/add_on/scriptstdstring/: scriptstdstring.h
cmake/: readme.md
res/: Player.as  test.as  tilemap0.txt
res/sample/: NPC.as  Player.as
sdk/: CMakeLists.txt
